# ascii-server

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE.md  README.md  manage.py  pyproject.toml  tailwind.config.js
.github/workflows/: test.yml
ascii/: conftest.py  settings.py  urls.py  wsgi.py
ascii/core/: admin.py  apps.py  clients.py  converters.py  fields.py  models.py  sauce.py  utils.py  views.py  widgets.py
ascii/core/backends/: storage.py
ascii/core/templatetags/: core_tags.py
ascii/core/tests/: test_sauce.py  test_views.py  utils.py
ascii/fudan/: admin.py  ansi.py  apps.py  choices.py  constants.py  models.py  utils.py  views.py
ascii/fudan/migrations/: 0001_initial.py  0002_remove_document_html_menulink_target_document_and_more.py  0003_alter_menulink_path_alter_menulink_type.py  0004_alter_menulink_target_document_and_more.py  0005_document_text.py  0006_alter_menulink_target_document_and_more.py  0007_alter_document_text_alter_menulink_text.py  0008_scratchfile.py  0009_assetfile.py
ascii/fundan/: admin.py  apps.py  models.py  views.py
ascii/fundan/migrations/: 0001_initial.py  0002_alter_menulink_options_menulink_organizer_and_more.py
ascii/huku/: admin.py  apps.py  models.py  utils.py  views.py
ascii/huku/migrations/: 0001_initial.py  0002_remove_mltartwork_mlt_file_remove_mltartwork_title_and_more.py  (+13 more)
ascii/mozz/: admin.py  api.py  apps.py  choices.py  forms.py  models.py  serializers.py  utils.py  views.py
ascii/templates/: base.html  index.html
ascii/textmode/: admin.py  apps.py  choices.py  clients.py  constants.py  forms.py  loaders.py  models.py  sauce.py  signals.py  views.py
ascii/translations/: admin.py  apps.py  choices.py  clients.py  models.py  utils.py
ascii/users/: admin.py  apps.py  authentication.py  models.py
data/: textmode.sqlite3
reference/: XBIN.TXT
requirements/: requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
scripts/: edit-post  regenerate-xb-images
textmode/: settings.py  urls.py  wsgi.py
textmode/core/: apps.py
textmode/fundan/: apps.py  models.py
textmode/templates/: index.html
tools/: bootstrap  edit-post  gunicorn  mypy  ruff  start  tailwindcss
(+180 files in other folders)
