[project]
requires-python = "==3.11"

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = ["mypy_django_plugin.main"]
exclude = [".*tests/"]

[tool.django-stubs]
django_settings_module = "textmode.settings"

[tool.pytest.ini_options]
addopts = "--ds=textmode.settings --reuse-db -v"
python_files = ["tests.py", "test_*.py"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "DJ",   # flake8-django
    "G",    # flake8-logging-format
    "PT",   # flake8-pytest-style
    "C4",   # flake8-comprehensions
    "ISC",  # flake8-implicit-str-concat
    "UP",   # pyupgrade
]

ignore = [
    "E501",  # Line length is enforced by black
    "G004",  # Allow f-string logging statements
]

[tool.ruff.lint.per-file-ignores]
"*/tests/*" = ["S"]
"*/migrations/*" = ["I"]

[tool.ruff.lint.isort]
known-first-party = ['textmode']
